[gd_scene load_steps=63 format=2]

[ext_resource path="res://images/oven-sheet.png" type="Texture" id=1]
[ext_resource path="res://images/espressomachine.png" type="Texture" id=2]
[ext_resource path="res://assets/clickable_item.gd" type="Script" id=3]
[ext_resource path="res://images/pchooo.png" type="Texture" id=4]
[ext_resource path="res://images/coffee_grinder.png" type="Texture" id=5]
[ext_resource path="res://images/kettle-sheet.png" type="Texture" id=6]
[ext_resource path="res://images/strawberry.png" type="Texture" id=7]
[ext_resource path="res://images/vanilla.png" type="Texture" id=8]
[ext_resource path="res://images/cinnamon.png" type="Texture" id=9]
[ext_resource path="res://images/chocolate.png" type="Texture" id=10]
[ext_resource path="res://images/honey.png" type="Texture" id=11]
[ext_resource path="res://images/caramel.png" type="Texture" id=12]
[ext_resource path="res://images/sugar.png" type="Texture" id=13]
[ext_resource path="res://images/green_tea.png" type="Texture" id=14]
[ext_resource path="res://images/black_tea.png" type="Texture" id=15]
[ext_resource path="res://images/coffee_pot-sheet.png" type="Texture" id=16]
[ext_resource path="res://images/pitcher.png" type="Texture" id=18]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 19, 12 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 19, 0, 19, 12 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 38, 0, 19, 12 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 57, 0, 19, 12 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 76, 0, 19, 12 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 95, 0, 19, 12 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 114, 0, 19, 12 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 133, 0, 19, 12 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 152, 0, 19, 12 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 171, 0, 19, 12 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 16 )
region = Rect2( 0, 0, 8, 9 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 16 )
region = Rect2( 8, 0, 8, 9 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 16 )
region = Rect2( 16, 0, 8, 9 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 16 )
region = Rect2( 24, 0, 8, 9 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 16 )
region = Rect2( 32, 0, 8, 9 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 16 )
region = Rect2( 40, 0, 8, 9 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 16 )
region = Rect2( 48, 0, 8, 9 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 16 )
region = Rect2( 56, 0, 8, 9 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 16 )
region = Rect2( 64, 0, 8, 9 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 16 )
region = Rect2( 72, 0, 8, 9 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 11, 9 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 6 )
region = Rect2( 11, 0, 11, 9 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 6 )
region = Rect2( 22, 0, 11, 9 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 6 )
region = Rect2( 33, 0, 11, 9 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 6 )
region = Rect2( 44, 0, 11, 9 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 6 )
region = Rect2( 55, 0, 11, 9 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 6 )
region = Rect2( 66, 0, 11, 9 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 6 )
region = Rect2( 77, 0, 11, 9 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 6 )
region = Rect2( 88, 0, 11, 9 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 5 )
region = Rect2( 35, 0, 7, 9 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 5 )
region = Rect2( 28, 0, 7, 9 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 5 )
region = Rect2( 21, 0, 7, 9 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 5 )
region = Rect2( 14, 0, 7, 9 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 5 )
region = Rect2( 7, 0, 7, 9 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 7, 9 )

[sub_resource type="SpriteFrames" id=36]
animations = [ {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "chocolate",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": false,
"name": "oven",
"speed": 1.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "honey",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "cinnamon",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "sugar",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "black tea",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "green tea",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "coffee",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "strawberry",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "vanilla",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "caramel",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "shot",
"speed": 5.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 28 ), SubResource( 29 ), SubResource( 21 ) ],
"loop": false,
"name": "water",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "milk",
"speed": 5.0
}, {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ) ],
"loop": true,
"name": "coffee grinder",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 4 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 4 )
region = Rect2( 24, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 4 )
region = Rect2( 40, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 8, 8 )

[sub_resource type="SpriteFrames" id=44]
animations = [ {
"frames": [ SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ) ],
"loop": false,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="Animation" id=45]
resource_name = "hover"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("object_sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.745098, 0.745098, 0.745098, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="clickable_item" type="TextureButton"]
margin_right = 16.0
margin_bottom = 7.0
focus_mode = 0
mouse_default_cursor_shape = 2
shortcut_in_tooltip = false
enabled_focus_mode = 0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cook_timer" type="Timer" parent="."]

[node name="object_sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 36 )
animation = "milk"
centered = false

[node name="pchoo" type="AnimatedSprite" parent="."]
z_index = 20
frames = SubResource( 44 )
frame = 6
playing = true
offset = Vector2( 0, -4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hover = SubResource( 45 )
[connection signal="mouse_entered" from="." to="." method="_on_clickable_item_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_clickable_item_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_clickable_item_pressed"]
[connection signal="timeout" from="cook_timer" to="." method="_on_cook_timer_timeout"]
[connection signal="animation_finished" from="pchoo" to="." method="_on_pchoo_animation_finished"]
